fix: bold @mentions in notes and fix calendar z-index on notes page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,7 @@ html {
 }
 
 .p-datepicker-panel {
-  z-index: 99999 !important; /* or higher if needed */
+  z-index: 100000 !important;
 }
 
 .new-profile-row{
